--- a/index.html
+++ b/index.html
@@ -1,157 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
-		<link rel="stylesheet" href="./assets/css/style.min.css" />
-		<title>The Rose Hair Studio</title>
-	</head>
-	<body>
-		<!-- Messenger Plugin chat Code -->
-		<div id="fb-root"></div>
 
-		<!-- Your Plugin chat code -->
-		<div id="fb-customer-chat" class="fb-customerchat"></div>
-		<header>
-			<nav class="navbar navbar-expand-lg navbar-light">
-				<a class="navbar-brand" href="#">
-					<img src="./assets/images/logo.png" alt="" />
-				</a>
-				<button
-					class="navbar-toggler"
-					type="button"
-					data-toggle="collapse"
-					data-target="#navbarTogglerDemo02"
-					aria-controls="navbarTogglerDemo02"
-					aria-expanded="false"
-					aria-label="Toggle navigation"
-				>
-					<span class="navbar-toggler-icon"></span>
-				</button>
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
+	<link rel="stylesheet" href="./assets/css/style.min.css" />
+	<title>The Rose Hair Studio</title>
+</head>
 
-				<div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-					<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-						<li class="nav-item active">
-							<a class="nav-link" href="#">About</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#">Service</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#">Special offers</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#">Gallery</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#">Events</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#">Blog</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#">Contact</a>
-						</li>
-					</ul>
-				</div>
-			</nav>
-		</header>
+<body>
+	<!-- Messenger Plugin chat Code -->
+	<div id="fb-root"></div>
 
-		<main>
-			<section class="hero">
-				<img class="w-100" src="./assets/images/banner.png" alt="banner" />
-			</section>
+	<!-- Your Plugin chat code -->
+	<div id="fb-customer-chat" class="fb-customerchat"></div>
+	<header>
+		<nav class="navbar navbar-expand-lg navbar-light">
+			<a class="navbar-brand" href="#">
+				<img src="./assets/images/logo.png" alt="" />
+			</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
+				aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
 
-			<section class="contact">
-				<div class="contact-txt">
-					<p>Địa Chỉ: 198 Trần Quốc Thảo P7 Q3 HCM</p>
-					<p>SĐT: 0865890338</p>
-				</div>
-				<div class="contact-inner">
-					<div class="contact-inner-ico">
-						<a
-							class="zoom-animation"
-							href="http://m.me/tung.nguyenxuan1997"
-							target="_blank"
-						>
-							<img src="./assets/images/ico_fb.png" alt="fb" />
-						</a>
-					</div>
-					<div class="contact-inner-ico">
-						<a
-							class="zoom-animation"
-							href="http://m.me/tung.nguyenxuan1997"
-							target="_blank"
-						>
-							<img src="./assets/images/ico_mess.png" alt="mess" />
-						</a>
-					</div>
-					<div class="contact-inner-ico ico-hand">
-						<a class="ico-hand-animation" href="javascript:void(0);">
-							<img src="./assets/images/ico_hand.png" alt="hand" />
-						</a>
-					</div>
-				</div>
-			</section>
-
-			<img
-				class="banner-customer"
-				src="./assets/images/banner-customer.png"
-				alt=""
-			/>
-		</main>
-
-		<footer>
-			<img src="./assets/images/studio_txt.png" alt="" />
-			<p>Salon Chuyên Màu Thời Trang</p>
-			<div class="footer-contact">
-				<a href="#" target="_blank">
-					<img src="./assets/images/ico_fb.png" alt="" />
-					<p class="footer-txt text-special">
-						<span class="txt-upper">the rose</span>
-						<span>hair studio</span>
-					</p>
-				</a>
-				<a href="#" target="_blank">
-					<img src="./assets/images/ico_instagram.png" alt="" />
-					<p class="footer-txt">the.rose.hairsalon</p>
-				</a>
-				<a href="#" target="_blank">
-					<img src="./assets/images/ico_tiktok.png" alt="" />
-					<p class="footer-txt text-special">
-						<span class="txt-upper">the rose</span>
-						<span>hair studio</span>
-					</p>
-				</a>
+			<div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+				<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+					<li class="nav-item active">
+						<a class="nav-link" href="#">About</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Service</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Special offers</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Gallery</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Events</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Blog</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Contact</a>
+					</li>
+				</ul>
 			</div>
-		</footer>
-		<script src="./assets/js/jquery.js"></script>
-		<script src="./assets/js/bootstrap.js"></script>
-		<script>
-			var chatbox = document.getElementById('fb-customer-chat');
-			chatbox.setAttribute('page_id', '115594927795651');
-			chatbox.setAttribute('attribution', 'biz_inbox');
-		</script>
+		</nav>
+	</header>
 
-		<!-- Your SDK code -->
-		<script>
-			window.fbAsyncInit = function () {
-				FB.init({
-					xfbml: true,
-					version: 'v13.0',
-				});
-			};
+	<main>
+		<section class="hero">
+			<img class="w-100" src="./assets/images/banner.png" alt="banner" />
+		</section>
 
-			(function (d, s, id) {
-				var js,
-					fjs = d.getElementsByTagName(s)[0];
-				if (d.getElementById(id)) return;
-				js = d.createElement(s);
-				js.id = id;
-				js.src = 'https://connect.facebook.net/vi_VN/sdk/xfbml.customerchat.js';
-				fjs.parentNode.insertBefore(js, fjs);
-			})(document, 'script', 'facebook-jssdk');
-		</script>
-	</body>
+		<section class="contact">
+			<div class="contact-txt">
+				<p>Địa Chỉ: 198 Trần Quốc Thảo P7 Q3 HCM</p>
+				<p>SĐT: 0865890338</p>
+			</div>
+			<div class="contact-inner">
+				<div class="contact-inner-ico">
+					<a class="zoom-animation" href="http://m.me/steven.dinh.129" target="_blank">
+						<img src="./assets/images/ico_fb.png" alt="fb" />
+					</a>
+				</div>
+				<div class="contact-inner-ico">
+					<a class="zoom-animation" href="http://m.me/steven.dinh.129" target="_blank">
+						<img src="./assets/images/ico_mess.png" alt="mess" />
+					</a>
+				</div>
+				<div class="contact-inner-ico ico-hand">
+					<a class="ico-hand-animation" href="javascript:void(0);">
+						<img src="./assets/images/ico_hand.png" alt="hand" />
+					</a>
+				</div>
+			</div>
+		</section>
+
+		<img class="banner-customer" src="./assets/images/banner-customer.png" alt="" />
+	</main>
+
+	<footer>
+		<img src="./assets/images/studio_txt.png" alt="" />
+		<p>Salon Chuyên Màu Thời Trang</p>
+		<div class="footer-contact">
+			<a href="http://m.me/steven.dinh.129" target="_blank">
+				<img src="./assets/images/ico_fb.png" alt="" />
+				<p class="footer-txt text-special">
+					<span class="txt-upper">the rose</span>
+					<span>hair studio</span>
+				</p>
+			</a>
+			<a href="http://m.me/steven.dinh.129" target="_blank">
+				<img src="./assets/images/ico_instagram.png" alt="" />
+				<p class="footer-txt">the.rose.hairsalon</p>
+			</a>
+			<a href="http://m.me/steven.dinh.129" target="_blank">
+				<img src="./assets/images/ico_tiktok.png" alt="" />
+				<p class="footer-txt text-special">
+					<span class="txt-upper">the rose</span>
+					<span>hair studio</span>
+				</p>
+			</a>
+		</div>
+	</footer>
+	<script src="./assets/js/jquery.js"></script>
+	<script src="./assets/js/bootstrap.js"></script>
+	<script>
+		var chatbox = document.getElementById('fb-customer-chat');
+		chatbox.setAttribute('page_id', '115594927795651');
+		chatbox.setAttribute('attribution', 'biz_inbox');
+	</script>
+
+	<!-- Your SDK code -->
+	<script>
+		window.fbAsyncInit = function () {
+			FB.init({
+				xfbml: true,
+				version: 'v13.0',
+			});
+		};
+
+		(function (d, s, id) {
+			var js,
+				fjs = d.getElementsByTagName(s)[0];
+			if (d.getElementById(id)) return;
+			js = d.createElement(s);
+			js.id = id;
+			js.src = 'https://connect.facebook.net/vi_VN/sdk/xfbml.customerchat.js';
+			fjs.parentNode.insertBefore(js, fjs);
+		})(document, 'script', 'facebook-jssdk');
+	</script>
+</body>
+
 </html>
