--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="./assets/css/style.min.css" />
+	<link rel="stylesheet" href="./assets/css/slice.css" />
 	<title>The Rose Hair Studio</title>
 </head>
 
@@ -24,32 +25,6 @@
 				aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
-
-			<div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-				<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-					<li class="nav-item active">
-						<a class="nav-link" href="#">About</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Service</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Special offers</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Gallery</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Events</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Blog</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Contact</a>
-					</li>
-				</ul>
-			</div>
 		</nav>
 	</header>
 
@@ -82,7 +57,45 @@
 			</div>
 		</section>
 
-		<img class="banner-customer" src="./assets/images/banner-customer.png" alt="" />
+		<div id="carousel" class="carousel slide" data-ride="carousel">
+			<div class="carousel-inner">
+				<div class="carousel-item active" data-interval="1500">
+					<div class="item">
+						<img src="./assets/images/slice1.jpg" class="d-block" alt="slice1" />
+						<img src="./assets/images/slice2.jpg" class="d-block" alt="slice2" />
+						<img src="./assets/images/slice3.jpg" class="d-block" alt="slice3" />
+					</div>
+				</div>
+				<div class="carousel-item " data-interval="1500">
+					<div class="item">
+						<img src="./assets/images/slice4.jpg" class="d-block" alt="slice4" />
+						<img src="./assets/images/slice5.jpg" class="d-block" alt="slice5" />
+						<img src="./assets/images/slice6.jpg" class="d-block" alt="slice6" />
+					</div>
+				</div>
+				<div class="carousel-item " data-interval="1500">
+					<div class="item">
+						<img src="./assets/images/slice7.jpg" class="d-block" alt="slice7" />
+						<img src="./assets/images/slice8.jpg" class="d-block" alt="slice8" />
+						<img src="./assets/images/slice9.jpg" class="d-block" alt="slice9" />
+					</div>
+				</div>
+				<div class="carousel-item " data-interval="1500">
+					<div class="item">
+						<img src="./assets/images/slice10.jpg" class="d-block" alt="slice10" />
+						<img src="./assets/images/slice11.jpg" class="d-block" alt="slice11" />
+						<img src="./assets/images/slice12.jpg" class="d-block" alt="slice12" />
+					</div>
+				</div>
+				<div class="carousel-item " data-interval="1500">
+					<div class="item">
+						<img src="./assets/images/slice13.jpg" class="d-block" alt="slice13" />
+						<img src="./assets/images/slice14.jpg" class="d-block" alt="slice14" />
+						<img src="./assets/images/slice15.jpg" class="d-block" alt="slice15" />
+					</div>
+				</div>
+			</div>
+		</div>
 	</main>
 
 	<footer>
@@ -96,7 +109,8 @@
 					<span>hair studio</span>
 				</p>
 			</a>
-			<a href="http://m.me/steven.dinh.129" target="_blank">
+			<a href="https://www.instagram.com/the.rose.hairsalon/
+			" target="_blank">
 				<img src="./assets/images/ico_instagram.png" alt="" />
 				<p class="footer-txt">the.rose.hairsalon</p>
 			</a>
@@ -111,10 +125,11 @@
 	</footer>
 	<script src="./assets/js/jquery.js"></script>
 	<script src="./assets/js/bootstrap.js"></script>
+
 	<script>
 		var chatbox = document.getElementById('fb-customer-chat');
-		chatbox.setAttribute('page_id', '115594927795651');
-		chatbox.setAttribute('attribution', 'biz_inbox');
+		chatbox.setAttribute("page_id", "174376426449932");
+		chatbox.setAttribute("attribution", "biz_inbox");
 	</script>
 
 	<!-- Your SDK code -->
@@ -122,19 +137,17 @@
 		window.fbAsyncInit = function () {
 			FB.init({
 				xfbml: true,
-				version: 'v13.0',
+				version: 'v13.0'
 			});
 		};
 
 		(function (d, s, id) {
-			var js,
-				fjs = d.getElementsByTagName(s)[0];
+			var js, fjs = d.getElementsByTagName(s)[0];
 			if (d.getElementById(id)) return;
-			js = d.createElement(s);
-			js.id = id;
+			js = d.createElement(s); js.id = id;
 			js.src = 'https://connect.facebook.net/vi_VN/sdk/xfbml.customerchat.js';
 			fjs.parentNode.insertBefore(js, fjs);
-		})(document, 'script', 'facebook-jssdk');
+		}(document, 'script', 'facebook-jssdk'));
 	</script>
 </body>
 
