--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
 			</div>
 			<div class="contact-inner">
 				<div class="contact-inner-ico">
-					<a class="zoom-animation" href="http://m.me/steven.dinh.129" target="_blank">
+					<a class="zoom-animation" href="https://m.me/theroseluxurystudio" target="_blank">
 						<img src="./assets/images/ico_fb.png" alt="fb" />
 					</a>
 				</div>
 				<div class="contact-inner-ico">
-					<a class="zoom-animation" href="http://m.me/steven.dinh.129" target="_blank">
+					<a class="zoom-animation" href="https://m.me/theroseluxurystudio" target="_blank">
 						<img src="./assets/images/ico_mess.png" alt="mess" />
 					</a>
 				</div>
@@ -102,7 +102,7 @@
 		<img src="./assets/images/studio_txt.png" alt="" />
 		<p>Salon Chuyên Màu Thời Trang</p>
 		<div class="footer-contact">
-			<a href="http://m.me/steven.dinh.129" target="_blank">
+			<a href="https://m.me/theroseluxurystudio" target="_blank">
 				<img src="./assets/images/ico_fb.png" alt="" />
 				<p class="footer-txt text-special">
 					<span class="txt-upper">the rose</span>
@@ -114,7 +114,7 @@
 				<img src="./assets/images/ico_instagram.png" alt="" />
 				<p class="footer-txt">the.rose.hairsalon</p>
 			</a>
-			<a href="http://m.me/steven.dinh.129" target="_blank">
+			<a href="https://m.me/theroseluxurystudio" target="_blank">
 				<img src="./assets/images/ico_tiktok.png" alt="" />
 				<p class="footer-txt text-special">
 					<span class="txt-upper">the rose</span>
