--- a/index.html
+++ b/index.html
@@ -61,37 +61,37 @@
 			<div class="carousel-inner">
 				<div class="carousel-item active" data-interval="2000">
 					<div class="item">
-						<img src="./assets/images/slice1.jpg" class="d-block" alt="slice1" />
-						<img src="./assets/images/slice2.jpg" class="d-block" alt="slice2" />
-						<img src="./assets/images/slice3.jpg" class="d-block" alt="slice3" />
+						<a href="https://m.me/theroseluxurystudio" target="_blank"><img src="./assets/images/slice1.jpg" class="d-block" alt="slice1" /></a>
+						<a href="https://m.me/theroseluxurystudio" target="_blank"><img src="./assets/images/slice2.jpg" class="d-block" alt="slice2" /></a>
+						<a href="https://m.me/theroseluxurystudio" target="_blank"><img src="./assets/images/slice3.jpg" class="d-block" alt="slice3" /></a>
 					</div>
 				</div>
 				<div class="carousel-item " data-interval="2000">
 					<div class="item">
-						<img src="./assets/images/slice4.jpg" class="d-block" alt="slice4" />
-						<img src="./assets/images/slice5.jpg" class="d-block" alt="slice5" />
-						<img src="./assets/images/slice6.jpg" class="d-block" alt="slice6" />
+						<a href="https://m.me/theroseluxurystudio" target="_blank"><img src="./assets/images/slice4.jpg" class="d-block" alt="slice4" /></a>
+						<a href="https://m.me/theroseluxurystudio" target="_blank"><img src="./assets/images/slice5.jpg" class="d-block" alt="slice5" /></a>
+						<a href="https://m.me/theroseluxurystudio" target="_blank"><img src="./assets/images/slice6.jpg" class="d-block" alt="slice6" /></a>
 					</div>
 				</div>
 				<div class="carousel-item " data-interval="2000">
 					<div class="item">
-						<img src="./assets/images/slice7.jpg" class="d-block" alt="slice7" />
-						<img src="./assets/images/slice8.jpg" class="d-block" alt="slice8" />
-						<img src="./assets/images/slice9.jpg" class="d-block" alt="slice9" />
+						<a href="https://m.me/theroseluxurystudio" target="_blank"><img src="./assets/images/slice7.jpg" class="d-block" alt="slice7" /></a>
+						<a href="https://m.me/theroseluxurystudio" target="_blank"><img src="./assets/images/slice8.jpg" class="d-block" alt="slice8" /></a>
+						<a href="https://m.me/theroseluxurystudio" target="_blank"><img src="./assets/images/slice9.jpg" class="d-block" alt="slice9" /></a>
 					</div>
 				</div>
 				<div class="carousel-item " data-interval="2000">
 					<div class="item">
-						<img src="./assets/images/slice10.jpg" class="d-block" alt="slice10" />
-						<img src="./assets/images/slice11.jpg" class="d-block" alt="slice11" />
-						<img src="./assets/images/slice12.jpg" class="d-block" alt="slice12" />
+						<a href="https://m.me/theroseluxurystudio" target="_blank"><img src="./assets/images/slice10.jpg" class="d-block" alt="slice10" /></a>
+						<a href="https://m.me/theroseluxurystudio" target="_blank"><img src="./assets/images/slice11.jpg" class="d-block" alt="slice11" /></a>
+						<a href="https://m.me/theroseluxurystudio" target="_blank"><img src="./assets/images/slice12.jpg" class="d-block" alt="slice12" /></a>
 					</div>
 				</div>
 				<div class="carousel-item " data-interval="2000">
 					<div class="item">
-						<img src="./assets/images/slice13.jpg" class="d-block" alt="slice13" />
-						<img src="./assets/images/slice14.jpg" class="d-block" alt="slice14" />
-						<img src="./assets/images/slice15.jpg" class="d-block" alt="slice15" />
+						<a href="https://m.me/theroseluxurystudio" target="_blank"><img src="./assets/images/slice13.jpg" class="d-block" alt="slice13" /></a>
+						<a href="https://m.me/theroseluxurystudio" target="_blank"><img src="./assets/images/slice14.jpg" class="d-block" alt="slice14" /></a>
+						<a href="https://m.me/theroseluxurystudio" target="_blank"><img src="./assets/images/slice15.jpg" class="d-block" alt="slice15" /></a>
 					</div>
 				</div>
 			</div>
@@ -99,7 +99,7 @@
 	</main>
 
 	<footer>
-		<img src="./assets/images/studio_txt.png" alt="" />
+		<a class="link-footer" href="https://m.me/theroseluxurystudio" target="_blank"><img src="./assets/images/studio_txt.png" alt="" /></a>
 		<p>Salon Chuyên Màu Thời Trang</p>
 		<div class="footer-contact">
 			<a href="https://m.me/theroseluxurystudio" target="_blank">
