--- a/index.html
+++ b/index.html
@@ -100,26 +100,17 @@
 
 	<footer>
 		<a class="link-footer" href="https://m.me/theroseluxurystudio" target="_blank"><img src="./assets/images/studio_txt.png" alt="" /></a>
-		<p>Salon Chuyên Màu Thời Trang</p>
+		<p class="deps-footer">Salon Chuyên Màu Thời Trang</p>
 		<div class="footer-contact">
 			<a href="https://m.me/theroseluxurystudio" target="_blank">
 				<img src="./assets/images/ico_fb.png" alt="" />
-				<p class="footer-txt text-special">
-					<span class="txt-upper">the rose</span>
-					<span>hair studio</span>
-				</p>
 			</a>
 			<a href="https://www.instagram.com/the.rose.hairsalon/
 			" target="_blank">
 				<img src="./assets/images/ico_instagram.png" alt="" />
-				<p class="footer-txt">the.rose.hairsalon</p>
 			</a>
 			<a href="https://m.me/theroseluxurystudio" target="_blank">
 				<img src="./assets/images/ico_tiktok.png" alt="" />
-				<p class="footer-txt text-special">
-					<span class="txt-upper">the rose</span>
-					<span>hair studio</span>
-				</p>
 			</a>
 		</div>
 	</footer>
